{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 210,
  "lineage": "8ccf1b85-a438-a7f7-c370-8c3f46a57d72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04681163a08179f28",
            "arn": "arn:aws:ec2:us-east-1:390403883579:instance/i-080e8f46ca12416d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080e8f46ca12416d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey_pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c389a216d6b7682b",
            "private_dns": "ip-10-10-0-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.40",
            "public_ip": "3.93.42.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b70bdf3d413a6b62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bc5e3d01a21326f",
            "tags": {
              "Name": "apache-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "1.3.6",
              "Name": "apache-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Dav",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5de5de968398be5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403883579:internet-gateway/igw-03435a496e31c3999",
            "id": "igw-03435a496e31c3999",
            "owner_id": "390403883579",
            "tags": {
              "Name": "igw vpc virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "1.3.6",
              "Name": "igw vpc virginia-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Dav",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0285c6d65466a8c1b"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403883579:route-table/rtb-0c0c2e47876c84406",
            "id": "rtb-0c0c2e47876c84406",
            "owner_id": "390403883579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03435a496e31c3999",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "1.3.6",
              "Name": "public crt-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Dav",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0285c6d65466a8c1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8786daa62030c83",
            "route_table_id": "rtb-0c0c2e47876c84406",
            "subnet_id": "subnet-07bc5e3d01a21326f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403883579:security-group/sg-0f5de5de968398be5",
            "description": "Allow SSH inbound traffc and ALL regress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5de5de968398be5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http over Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https over Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "390403883579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public instance 5G-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "1.3.6",
              "Name": "Public instance 5G-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Dav",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0285c6d65466a8c1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403883579:subnet/subnet-08bf204543a70b2ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bf204543a70b2ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403883579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet - VPC VIRGINIA-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "1.3.6",
              "Name": "Private Subnet - VPC VIRGINIA-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Dav",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0285c6d65466a8c1b"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403883579:subnet/subnet-07bc5e3d01a21326f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bc5e3d01a21326f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403883579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet - VPC VIRGINIA-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "1.3.6",
              "Name": "Public Subnet - VPC VIRGINIA-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Dav",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0285c6d65466a8c1b"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403883579:vpc/vpc-0285c6d65466a8c1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04ff42377bf8c170d",
            "default_route_table_id": "rtb-0e721c2d7eae4590d",
            "default_security_group_id": "sg-062618b8d843c5af4",
            "dhcp_options_id": "dopt-06a82c140122fc5af",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0285c6d65466a8c1b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e721c2d7eae4590d",
            "owner_id": "390403883579",
            "tags": {
              "Name": "VPC VIRGINIA-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "1.3.6",
              "Name": "VPC VIRGINIA-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Dav",
              "project": "cerberus",
              "region": "virginia"
            }
          }
        }
      ]
    }
  ]
}